--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="prout-me.html">prout Me</a>
+                        <a class="nav-link" href="about-me.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
